<resources>
    <string name="app_name">NoteTube-Android</string>
    <string name="documents_view_title">Documents</string>
    <string name="primary_url">http://159.203.10.79</string>

    <string name="no_account_register_here"><u>No account? Register here.</u></string>
    <string name="already_registered_login_here"><u>Already registered? Login here.</u></string>
  
    <!--Toast messages-->
    <string name="toast_connection_error">Connection Error</string>
    <string name="toast_editing_note_unchanged">Note Unchanged</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="invalid_email">Invalid email</string>
    <string name="field_required">Field required.</string>
    <string name="email">Email</string>
    <string name="notetube">NoteTube</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="valid_link">Must be valid YouTube link.</string>
</resources>